--- a/Youttube_Text_claasisifacrtion.ipynb
+++ b/Youttube_Text_claasisifacrtion.ipynb
@@ -1768,10 +1768,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  this will create the heavy commits and then we will move on "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  from this line your next things will start with  good things to happen in your  place just you have to folloe the"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# things regularly dont miss any opportunity and try your best and give your best dont fall in any ones trap dont be someone who had not tried "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
